--- a/LSIS1/src/main/java/webroot/Juri.html
+++ b/LSIS1/src/main/java/webroot/Juri.html
@@ -9,8 +9,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="CSS/BUTTON.css" rel="stylesheet" type="text/css"/>
-        <script src="JavaScript/script.js" type="text/javascript"></script>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="CSS/style.css">
         <script src="JavaScript/Script.js"></script>
     </head>
     <body>
@@ -21,11 +20,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                     <a class="button button--pan" style="color:black" id="button" href="RegisterRound.html"><div>Registar Ronda</div></a>
                     <a class="button button--pan" style="color:black" id="button" href="Search.html"><div>Procurar Equipa/Robot</div></a>
                     <a class="button button--pan" style="color:black" id="button" href="Results.html"><div>Results</div></a>
-                    <a class="button button--pan" style="color:black" id="button" href="Info.html"><div>Informações</div></a>
                     <div class="track"></div>
                     <div class="car">
                         <div class="wheel wheel1">
-                            <img src="car_wheel_left.png" alt="">
+                            <img src="Imagens/car_wheel_left.png" alt="">
                         </div>
                     </div>
                 </div>
