--- a/LSIS1/src/main/java/webroot/RegisterCompetition.html
+++ b/LSIS1/src/main/java/webroot/RegisterCompetition.html
@@ -6,8 +6,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 <html lang="pt">
     <head>
         <meta charset="utf-8">
-        <title>Register</title>
-        <link rel="icon" type="image/png" href="icon/img_315977.png">
+        <title>Registar Competição</title>
         <link type="text/css" href="CSS/register_style.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width">
         <script src="JavaScript/RegisterCompetition.js"></script>      
@@ -15,9 +14,6 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <body>  
         <div class='blog'>
             <div class='header'>
-                <div class='pictit'>
-                    <img alt="nature" src="images/4752495707_72c9b36858_b.jpg" height="200" width="300">
-                </div>
                 <h5>Competição</h5>
                 <h6>Registar</h6>
             </div>
