--- a/LSIS1/src/main/java/webroot/Team.html
+++ b/LSIS1/src/main/java/webroot/Team.html
@@ -9,7 +9,6 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="CSS/BUTTON.css" rel="stylesheet" type="text/css"/>
-        <script src="JavaScript/script.js" type="text/javascript"></script>
         <link rel="stylesheet" href="CSS/style.css">
         <script src="JavaScript/Script.js"></script>
     </head>
@@ -17,9 +16,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <div>
             <div class="container"> 
                 <div class="sky"> 
-                    <a class="button button--pan" style="color:black" id="button" href="CompetitionSubscribe.html"><div>Inscrever numa Competição</div></a>
+                    <a class="button button--pan" style="color:black" id="button" href="CompetitionSubscribe.html"><div>Inscrição em Competição</div></a>
                     <a class="button button--pan" style="color:black" id="button" href="TeamInfo.html"><div>Informação Equipa   </div></a>
-                    <a class="button button--pan" style="color:black" id="button" href="RobotManagment.html"><div>Gestão dos Robots</div></a>
+                    <a class="button button--pan" style="color:black" id="button" href="RobotManagment.html"><div>Gestão dos Robôs</div></a>
                     <a class="button button--pan" style="color:black" id="button" href="Classification.html"><div>Consultar Classificações</div></a>
                     <div class="track"></div>
                     <div class="car">
