--- a/LSIS1/src/main/java/webroot/index.html
+++ b/LSIS1/src/main/java/webroot/index.html
@@ -5,24 +5,21 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="CSS/BUTTON.css" rel="stylesheet" type="text/css"/>
-        <script src="JavaScript/script.js" type="text/javascript"></script>
         <link rel="stylesheet" href="CSS/style.css">
         <script src="JavaScript/Script.js"></script>
 
-        <title>Robot</title>
+        <title>Robô</title>
     </head>
 
     <body> 
         <div class="container"> 
             <div class="sky"> 
-                <a class="button button--pan" style="color:black" id="button" href="RegisterCompetition.html"><div>Registar Competição</div></a>
-                <a class="button button--pan" style="color:black" id="button" href="RegisterTeam.html"><div>Registar Equipa</div></a>
-                <a class="button button--pan" style="color:black" id="button" href="RegisterRobot.html"><div>Registar Robô</div></a>
-                <a class="button button--pan" style="color:black" id="button" href="Info.html"><div>Informações</div></a>
+                <a class="button button--pan" style="color:black" id="button" href="Juri.html"><div>Júri</div></a>
+                <a class="button button--pan" style="color:black" id="button" href="Team.html"><div>Equipa</div></a>
                 <div class="track"></div>
                 <div class="car">
                     <div class="wheel wheel1">
-                        <img src="../Imagens/car_wheel_left.png" alt="">
+                        <img src="Imagens/car_wheel_left.png" alt="">
                     </div>
                 </div>
             </div>
