--- a/LSIS1/src/main/java/webroot/RegisterTeam.html
+++ b/LSIS1/src/main/java/webroot/RegisterTeam.html
@@ -6,7 +6,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 <html lang="pt">
     <head>
         <meta charset="utf-8">
-        <title>Register</title>
+        <title>Registar Equipa</title>
         <link rel="icon" type="image/png" href="icon/img_315977.png">
         <link type="text/css" href="CSS/register_style.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width">
