--- a/LSIS1/src/main/java/webroot/RobotManagment.html
+++ b/LSIS1/src/main/java/webroot/RobotManagment.html
@@ -5,10 +5,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
 -->
 <html>
     <head>
-        <title>Robot Managment</title>
+        <title>Gestão do Robot</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="image/png" href="images/319-3194221_animated-smiley-face-wink.png">
         <link type="text/css" href="CSS/info.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width">
         <script src="JavaScript/RobotManagement.js"></script>
@@ -17,32 +16,30 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <div>
             <div class='blog'>
                 <div class='header'>
-                    <div class='pictit'>
-                        <img alt="park" src="images/customer-parking-only-stencil-parking-lot-stencils-industrial-stencils-stencilslab-wall-stencils_1400x.jpg" height="200" width="300">
-                    </div>
-                    <h5>Info Page</h5>
-                    <h6>Everything you need in one place</h6>
+                    <h5>Página de Gestão do teu Robot</h5>
+                    <h6>Tudo sobre o teu robot numa só página!</h6>
                 </div>      
                 <div class='row'>
                     <div class='column1'>
-                        <button onclick="botaoRobotList();">Robot List</button>
-                        <input type="text" id="inputIdTeam" placeholder="Team ID"/>
+                        <button onclick="botaoRobotList();">Listar Robots</button>
+                        <input type="text" id="inputIdTeam" placeholder="ID Equipa"/>
                         <p></p>
-                        <button onclick="botaoRobotInfo();">Robot Info</button>
-                        <input type="text" id="inputIdRobot" placeholder="Robot ID"/>
+                        <button onclick="botaoRobotInfo();">Detalhes do Robot</button>
+                        <input type="text" id="inputIdRobot" placeholder="ID Robot"/>
+                        <p></p>
                         <button onclick ="botaoEliminarRobot();"> Eliminar Robot </button>
                         <input id="demo"/> 
                         <p></p>
                     </div>
                     <div class='column2'>  
-                        <h2 id="h2RobotList" style="display:none">Robot's List</h2> 
-                        <p id="pRobotList" style="display:none">All your team's registered robots! </p>
+                        <h2 id="h2RobotList" style="display:none">Lista de Robots</h2> 
+                        <p id="pRobotList" style="display:none">Todos os Robots registados pela tua Equipa! </p>
                         <table id ="tRobotList" style="display:none">
                             <theader id="tHeaderRobotsId" style="display:none" ><tr><th>Id Robot</th><th>Id Equipa</th><th>Nome Robot</th><th>Mac Address</th></tr></theader>
                             <tbody id="listaRobots">  </tbody>  
                         </table>
-                        <h2 id="h2RobotInfo" style="display: none">Robot Info</h2>
-                        <p id="pRobotInfo" style="display:none">If you wish to change your data, just fill in the label you want and click on the button "Alterar"</p>
+                        <h2 id="h2RobotInfo" style="display: none">Informação do Robot</h2>
+                        <p id="pRobotInfo" style="display:none">Caso pretendas alterar os dados do teu Robot, carrega no botão "Alterar"</p>
                         <form id ="fRobotInfo" name="RobotInfoForm" style="display:none" action="javascript:alterarDados()">
                             <label for="robotId" id="robotIdL">Id Robot:</label>
                             <input type="text" id="robotId" name="id"/>
