--- a/LSIS1/src/main/java/webroot/Search.html
+++ b/LSIS1/src/main/java/webroot/Search.html
@@ -5,7 +5,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
 -->
 <html>
     <head>
-        <title>Team Search</title>
+        <title>Procurar Equipa/Robot</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" href="CSS/info.css" rel="stylesheet">
