--- a/LSIS1/src/main/java/webroot/Search.html
+++ b/LSIS1/src/main/java/webroot/Search.html
@@ -24,7 +24,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                         <button onclick="botaoTeamInfo();">Listar Equipas</button>
                         <p></p>
                         <button onclick="botaoTeamDetails();">Detalhes de Equipa</button>
-                        <input type="text" id="inputTeamId" placeholder="ID Equipa"/>
+                        <input type="text" id="inputId" placeholder="ID Equipa"/>
                         <p></p>
                         <button onclick="botaoRobotInfo();">Listar Robôs</button>
                         <p></p>
@@ -76,6 +76,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                         </form>
                     </div>
                 </div>
+                <div class="row" id="infoPanel"></div>
             </div>
         </div>
     </body>
