--- a/LSIS1/src/main/java/webroot/CompetitionSubscribe.html
+++ b/LSIS1/src/main/java/webroot/CompetitionSubscribe.html
@@ -5,10 +5,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
 -->
 <html>
     <head>
-        <title>Competition subscribe</title>
+        <title>Inscrição em Competição</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="image/png" href="icon/img_315977.png">
         <link type="text/css" href="CSS/register_style.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width">
         <script src="JavaScript/CompetitionSubscribe.js"></script>  
@@ -17,39 +16,35 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <div>
             <div class='blog'>
                 <div class='header'>
-                    <div class='pictit'>
-                        <img alt="park" src="images/customer-parking-only-stencil-parking-lot-stencils-industrial-stencils-stencilslab-wall-stencils_1400x.jpg" height="200" width="300">
-                    </div>
-                    <h5>Info Page</h5>
-                    <h6>Everything you need in one place</h6>
+                    <h5>Informações</h5>
+                    <h6>Tudo num só lugar!</h6>
                 </div>      
                 <div class='row'>
                     <div class='column1'>
-                        <button onclick="botaoCompetitionList();">Competition List</button>
+                        <button onclick="botaoCompetitionList();">Listar Competições</button>
                         <p></p>
-                        <button onclick="botaoCompetitionSubscribe();">Competition Subscribe</button>
+                        <button onclick="botaoCompetitionSubscribe();">Inscrição em Competição</button>
                         <p></p>
                     </div>
                     <div class='column2'>      
-                        <h2 id="h2CompetitionTableInfo" style="display:none">Competitions info</h2> 
-                        <p id="pCompetitionTableInfo" style="display:none">Competitions available at the moment</p>
+                        <h2 id="h2CompetitionTableInfo" style="display:none">Informações de Competições</h2> 
+                        <p id="pCompetitionTableInfo" style="display:none">Competições disponíveis</p>
                         <table id ="tCompetitionTableInfo" style="display:none"> 
-                            <theader id="tHeaderId" style="display:none" ><tr><th>Id Competicao</th><th>Nome Competicao</th><th>Data Criacao</th></tr></theader>
+                            <theader id="tHeaderId" style="display:none" ><tr><th>Id Competição</th><th>Nome Competição</th><th>Data Criação</th></tr></theader>
                             <tbody id="listaCompeticoes">  </tbody>  
                         </table>
-                        <h2 id="h2CompetitionSubscribe" style="display:none">Competition Subscribe</h2> 
-                        <p id="pCompetitionSubscribe" style="display:none"> Submit your subscription to a Competition, in order to be able to play in it! </p>
+                        <h2 id="h2CompetitionSubscribe" style="display:none">Formulário de Inscrição</h2> 
+                        <p id="pCompetitionSubscribe" style="display:none"> Inscreve-te para participares! </p>
                         <form id ="fCompetitionSubscription" name="CompetitionSubscriptionForm" style="display:none" action="javascript:submeterDados()">
                             <label for="CompetitionId" id="competitionIdL">Id Competição</label>
                             <input type="text" id="competitionId" name="idCompeticao"/>
-
                             <label for="teamId" id="teamIdL">Id Equipa:</label>
                             <input type="text" id="teamNameId" name="teamId"/>
                             <input type="submit" value="Submeter">
                         </form>
-
                     </div>
                 </div>
+                <div class="row" id="infoPanel"></div>
             </div>
         </div>
     </body>
