--- a/LSIS1/src/main/java/webroot/TeamInfo.html
+++ b/LSIS1/src/main/java/webroot/TeamInfo.html
@@ -5,34 +5,29 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
 -->
 <html>
     <head>
-        <title>Team Info</title>
+        <title>Informação Equipa</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="image/png" href="icon/img_315977.png">
         <link type="text/css" href="CSS/register_style.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width">
         <script src="JavaScript/TeamInfo.js"></script>  
     </head>
     <body>
-    <body>
         <div>
             <div class='blog'>
                 <div class='header'>
-                    <div class='pictit'>
-                        <img alt="park" src="images/customer-parking-only-stencil-parking-lot-stencils-industrial-stencils-stencilslab-wall-stencils_1400x.jpg" height="200" width="300">
-                    </div>
-                    <h5>Team Info Page</h5>
-                    <h6>Every Team's information you can imagine!</h6>
+                    <h5>Página Informação Equipa</h5>
+                    <h6>Toda a informação que possas imaginar de todas as equipas!</h6>
                 </div>      
                 <div class='row'>
                     <div class='column1'>
-                        <button onclick="botaoTeamInfo();">Team Info</button>
-                        <input type="text" id="inputTeamId" placeholder="TEAM ID"/>
+                        <button onclick="botaoTeamInfo();">Informação Equipa</button>
+                        <input type="text" id="inputTeamId" placeholder="ID Equipa"/>
                         <p></p>
                     </div>
                     <div class='column2'>
-                        <h2 id="h2TeamInfo" style="display:none">Team info</h2> 
-                        <p id="pTeamInfo" style="display:none"> If you wish to change your data, just fill in the label you want and click on the button "Alterar" </p>
+                        <h2 id="h2TeamInfo" style="display:none">Informação Equipa</h2> 
+                        <p id="pTeamInfo" style="display:none"> Se pretender alterar algum dado da Equipa, preencha o campo pretendido e carregue no botão "Alterar"   </p>
                         <form id ="fTeamInfo" name="CompetitionSubscriptionForm" style="display:none" action="javascript:alterarDados()">
                             <label for="TeamId" id="TeamIdL">Id Equipa:</label>
                             <input type="text" id="teamId" name="teamId"/>
