--- a/LSIS1/src/main/java/webroot/Classification.html
+++ b/LSIS1/src/main/java/webroot/Classification.html
@@ -45,7 +45,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                         <h2 id="h2RoundResults" style="display: none">Classificação</h2>
                         <p id="pRoundResults" style="display:none">A tabela de classifição da ronda!</p>
                         <table id="tRoundResults" style="display: none">
-                            <theader id="tHeaderResultadosRondaId" style="display:none" ><tr><th>Id Robot/Ronda </th><th>Id Robot</th><th>Id Ronda</th><th>Tempo</th><th>Velocidade</th></tr></theader>
+                            <theader id="tHeaderResultadosRondaId" style="display:none" ><tr><th>Id Robot/Ronda </th><th>Id Robot</th><th>Id Ronda</th><th>Tempo</th><th>Velocidade</th><th>Pontos</th></tr></theader>
                             <tbody id="listaResultadosRonda">  </tbody> 
                         </table>
                     </div>
