--- a/LSIS1/src/main/java/webroot/Results.html
+++ b/LSIS1/src/main/java/webroot/Results.html
@@ -64,6 +64,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             <input type="text" id="tempoId" name="tempo"/>
                             <label for="velocidade" id="velocidadeL">Velocidade:</label>
                             <input type="text" id="velocidadeId" name="velocidade"/>
+                            <label for="pontos" id="pontosL">Pontos:</label>
+                            <input type="text" id="pontosId" name="pontos"/>
                             <input type="submit" value="Alterar">
                         </form>
                     </div>
